kubernetes/script/redis/predixy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: predixy
  namespace: redis-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: predixy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: predixy
    spec:
      containers:
        - image: 'lweia/predixy:v2'
          imagePullPolicy: IfNotPresent
          name: predixy
          volumeMounts:
            - mountPath: /etc/predixy/
              name: predixy-config-dir
              readOnly: true
          ports:
            - name: http
              protocol: TCP
              containerPort: 7617
          resources: # 资源分配
            limits: # 容器能使用资源的资源的最大值，设置为0表示使用资源无上限
              cpu: 20m
              memory: 100Mi
            requests: # 容器使用的最小资源需求,判断节点是否满足节点需求
              cpu: 5m
              memory: 50Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            name: predixy-config  # 文档后边补上predixy-config的配置信息
          name: predixy-config-dir
---
apiVersion: v1
kind: Service
metadata:
  name: predixy
  namespace: redis-system
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: predixy-port
      nodePort: 31379
      port: 7617
      protocol: TCP
      targetPort: 7617
  selector:
    app: predixy
  sessionAffinity: None
  type: NodePort
